# ibk-automation

./: .flake8  .gitignore  .pre-commit-config.yaml  .pyway.conf  .readthedocs.yaml  :memory  LICENSE  README.md  TODO.md  collect_symbols_config.yml  configuration.yml  debug_output.csv  doc8.ini  main.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  check-docs.yml
data/: cervino_rebalance_v2.csv  final.csv  initial.csv  movements.csv  preferred_values.csv  symbols_not_found.csv  trading.db  trading_bu01.db  unconfirmed_contracts.csv
data/rotations/2024/July/: Cervino 240704 Inicial.xlsx  Cervino 240705 Rebalance Original.xlsx  Cervino 240705 Rebalance.xlsx  Cervino Rebalance 240730.xlsx
data/rotations/2024/May/: Cervino Rebalance 240503.xlsx  Cervino Rebalance 240531.xlsx  filtered_portfolio.20240504.csv  filtered_portfolio.20240601.csv
data/rotations/2024/September/: Cervino Rebalance 240916.xlsx  Cervino Rebalance 240916_Reduced.xlsx
doc_scratch/: doc-cheat-sheet.rst.sample
docs/: .readthedocs.yaml  Makefile.sp  conf.py  custom_conf.py  index.rst  movements.md  order_field_specs.md  tws_orders.md  workflow.md
docs/.sphinx/: get_vale_conf.py  package-lock.json  requirements.txt
docs/.sphinx/_static/: footer.css
docs/.sphinx/_templates/: footer.html
docs/source/: configuration_file.rst  design.rst  development_notes.rst  movements.rst  tws_orders_state.rst  user_guide.rst  workflow.rst
ib_api/IBJts/samples/Python/Testbed/: Program.py
ib_src/IBJts/samples/Python/Testbed/: AvailableAlgoParams.py  Program.py
ib_src/IBJts/source/JavaClient/: .classpath
ib_src/IBJts/source/pythonclient/: setup.py
ib_src/IBJts/source/pythonclient/ibapi/: client.py  common.py  contract.py  decoder.py  execution.py  order.py  orderdecoder.py  scanner.py  utils.py  wrapper.py
ib_src/ib_api/IBJts/samples/Python/Testbed/: ContractSamples.py  OrderSamples.py  Program.py  ScannerSubscriptionSamples.py
ib_src/ib_api/IBJts/source/pythonclient/: setup.py
ib_src/ib_api/IBJts/source/pythonclient/ibapi/: client.py  comm.py  commission_report.py  common.py  connection.py  contract.py  decoder.py  execution.py  order.py  order_condition.py  orderdecoder.py  reader.py  scanner.py  (+3 more)
ib_src/samples/: AvailableAlgoParams.py  ContractSamples.py  OrderSamples.py  ib_program_sample.py
salduba/: ib_proxy.py  main.py  order_model.py  stand-alone.py  update_symbols.py
salduba/corvino/: model.py  movements.py  parse_input.py  update_contracts.py  update_symbols.py  update_symbols.py.bad  update_symbols_command.py.bad
salduba/corvino/persistence/: movement_record.py
salduba/corvino/services/: app.py
salduba/ib_tws_proxy/: configuration.py  ib_callback_types.py  operations.py  proxy_base.py  standalone.py  util.py
salduba/ib_tws_proxy/backing_db/: db.py  model.py  record.py  repo.py
salduba/ib_tws_proxy/backing_db/schema/: v0001.sql  v1.sql
salduba/ib_tws_proxy/backing_db/seed-data/: meta.sql  v0001.sql  v1.sql
salduba/ib_tws_proxy/base_proxy/: tws_proxy.py
salduba/ib_tws_proxy/conid_updater/: contract_updater.py.bad  updater.py  updater.py.bad
salduba/ib_tws_proxy/contracts/: contract_repo.py  lookup_contract_details.py
salduba/ib_tws_proxy/domain/: enumerations.py
salduba/ib_tws_proxy/domain/ibapi/: AvailableAlgoParams.py
salduba/ib_tws_proxy/orders/: OrderRepo.py  placing_orders.py
salduba/samples/: AvailableAlgoParams.py  ib_program_sample.py
salduba/util/: files.py  logging.py  tests.py  time.py
scripts/: gemini-prompts.md  scratch.ipynb  scratch.json  test.db
src/salduba/: order_model.py
src/salduba/common/: configuration.py  yaml_config.py
src/salduba/common/persistence/alchemy/: db.py  repo.py
src/salduba/common/persistence/pyway/: migrate_patch.py  migrating.py
src/salduba/corvino/: movements.py  parse_input.py  update_contracts.py  update_symbols.py.bad
src/salduba/corvino/commands/: cli.py  configuration.py  corvino_logging.yaml
src/salduba/corvino/io/: parse_input.py  results_out.py
src/salduba/corvino/persistence/: movement_record.py  positions_record.py
src/salduba/corvino/resources/: cervino_config.yml  logging.yml
src/salduba/corvino/resources/pyway/: V01_01__initial.sql  V01_02__addallocation.sql
src/salduba/corvino/services/: app.py
src/salduba/ib_tws_proxy/: configuration.py  ib_callback_types.py  operations.py  proxy_base.py.bad  standalone.py.bad  util.py
src/salduba/ib_tws_proxy/backing_db/: db.py  model.py  record.py  repo.py
src/salduba/ib_tws_proxy/backing_db/schema/: meta.sql  v0001.sql
src/salduba/ib_tws_proxy/backing_db/seed-data/: meta.sql
src/salduba/ib_tws_proxy/base_proxy/: tws_proxy.py
src/salduba/ib_tws_proxy/conid_updater/: contract_updater.py.bad  updater.py.bad
src/salduba/ib_tws_proxy/contracts/: contract_repo.py  lookup_contract_details.py  model.py  runner.py
src/salduba/ib_tws_proxy/domain/: enumerations.py
src/salduba/ib_tws_proxy/domain/ibapi/: AvailableAlgoParams.py
src/salduba/ib_tws_proxy/orders/: OrderRepo.py  placing_orders.py
src/salduba/util/: files.py  logging.py  logging.yaml  tests.py  time.py
src/salduba/util/sys/: paths.py
tests/: context.py  test_advanced.py  test_basic.py  test_suite.py
tests/resources/: Cervino Rebalance 240503 minimal.xlsx  Cervino Rebalance 240503.xlsx  cervino_rebalance_v2.csv  cervino_rebalance_v2_minimal.csv  logging.yaml
tests/salduba/common/persistence/: test_sqlalchemy_samples.py
tests/salduba/common/persistence/alchemy/: sample_repo.py  test_sqlalchemy_samples.py
tests/salduba/common/persistence/pyway/: test_pyway_utils.py
tests/salduba/corvino/: errors_empty_db.csv  model_test.py.obsolete  test_parse_input.py  test_place_orders.py  test_verify_contracts.py
tests/salduba/corvino/io/: test_out.py  test_parse_input.py
tests/salduba/ib_tws_proxy/backing_db/: minimal_records.sql  test_db.py  test_db_init.py  test_model.py
tests/salduba/ib_tws_proxy/contracts/: sample_contracts.csv  test_lookup_contract_details.py  test_model.py
tests/salduba/ib_tws_proxy/orders/: test_order_record.py
(+4 files in other folders)
