[tool.poetry]
name = "salduba_corvino"
# https://python-poetry.org/docs/cli/#version
# https://packaging.python.org/en/latest/specifications/version-specifiers/#version-specifiers
# [N!]N(.N)*[{a|b|rc}N][.postN][.devN] == "1.2.3a0.post3.dev10
# YYYY.X.Y.... also allowed
# Possible tools:
#   - https://github.com/mtkennerly/poetry-dynamic-versioning
#   - https://github.com/mtkennerly/dunamai
#
# For example: `poetry version prerelease`
version = "1.0.0a6" # "1.0.0a0.post2"
description = "Automated Trade Management for Corvino Fund"
authors = ["Miguel Pinilla <miguel.pinilla@saldubatech.com>"]
readme = ["README.md"]
repository = "https://github.com/Saldubatech/poetry-sample"
license = "Proprietary"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Typing :: Typed"
]
packages = [
  {include = "salduba", from = "src"}
]
exclude = ["ib_src"]

[tool.poetry.dependencies]
python = "^3.11"
ibapi = "^9.81.1.post1"
pandas = "^2.2.2"
pyyaml = "^6.0.1"
datetime = "^5.5"
pathlib = "^1.0.1"
mergedeep = "^1.3.4"
openpyxl = "^3.1.2"
inflection = "^0.5.1"
click = "^7.0"  # "^8.1.7"

sqlalchemy = "^2.0.31"
pixi = "^1.0.1"
platformdirs = "^4.2.2"


matplotlib = "^3.9.0"
pyway = "^0.3.28"
importlib = "^1.0.4"
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
sphinx = "^7.3.7"
mypy = "^1.10.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.1"
flake8 = "^7.0.0"


# https://github.com/jvllmr/poetry-types
isort = "^5.13.2"

aiofiles = "^24.1.0"
alabaster = "^0.7.16"
annotated-types = "^0.7.0"
anyio = "^4.4.0"
appdirs = "^1.4.4"
attrs = "^23.2.0"
babel = "^2.15.0"
canonical = "^0.52.0"
cattrs = "^23.2.3"
certifi = "^2024.6.2"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
ckms = "^0.65.0"
click = "^7.0"  # "^8.1.7"
# click = "^8.1.7"
colorama = "^0.4.6"
crcmod = "^1.7"
cryptography = "^42.0.8"
dnspython = "^2.6.1"
docutils = "^0.21.2"
dsnparse = "^0.2.1"
email-validator = "^2.2.0"
esbonio = "^0.16.4"
esbonio-extensions = "^0.2.2"
git-python = "^1.0.3"
gitdb = "^4.0.11"
gitpython = "^3.1.43"
h11 = "^0.14.0"
httpcore = "^1.0.5"
httpx = "^0.27.0"
idna = "^3.7"
imagesize = "^1.4.1"
inflect = "^7.3.1"
iso3166 = "^2.1.1"
jinja2 = "^3.1.4"
lsprotocol = "^2023.0.1"
markdown-it-py = "^3.0.0"
markupsafe = "^2.1.5"
mdit-py-plugins = "^0.4.1"
mdurl = "^0.1.2"
more-itertools = "^10.3.0"
myst-parser = {extras = ["linkify"], version = "^3.0.1"}
packaging = "^24.1"
pbr = "^6.0.0"
phonenumbers = "^8.13.40"
platformdirs = "^4.2.2"
pyasn1 = "^0.6.0"
pyasn1-modules = "^0.4.0"
pycparser = "^2.22"
pydantic = "^2.8.0"
pydantic-python-regex-validator = "^0.3.4"
pydantic-validators = "^0.1.0"
pydantic-core = "^2.20.0"
pygls = "^1.3.1"
pygments = "^2.18.0"
pyspellchecker = "^0.8.1"
pytz = "^2024.1"
pyyaml = "^6.0.1"
requests = "^2.32.3"
restructuredtext-lint = "^1.4.0"
smmap = "^5.0.1"
sniffio = "^1.3.1"
snowballstemmer = "^2.2.0"
sphinx-autobuild = "^2024.4.16"
sphinx-copybutton = "^0.5.2"
sphinx-tabs = "^3.4.5"
sphinx-design = "^0.6.0"
sphinxcontrib-applehelp = "^1.0.8"
sphinxcontrib-devhelp = "^1.0.6"
sphinxcontrib-htmlhelp = "^2.0.5"
sphinxcontrib-jquery = "^4.1"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-plantuml = "^0.30"
sphinxcontrib-qthelp = "^1.0.7"
sphinxcontrib-serializinghtml = "^1.1.10"
sphinxext-opengraph = "^0.9.1"
starlette = "^0.37.2"
stevedore = "^5.2.0"
termcolor = "^2.4.0"
typeguard = "^4.3.0"
typing-extensions = "^4.12.2"
unimatrix = "^1.14.0"
urllib3 = "^2.2.2"
uvicorn = "^0.30.1"
watchfiles = "^0.22.0"
websockets = "^12.0"
linkify = "^1.4"
sphinxcontrib-confluencebuilder = "^2.5.2"
coverage = "^7.5.4"

sphinxcontrib-inlinesyntaxhighlight = "^0.2"
[tool.poetry.group.types.dependencies]
types-flake8 = "^7.0.0.20240511"

types-pyyaml = "^6.0.12.20240311"
pandas-stubs = "^2.2.2.240514"

types-requests = "^2.32.0.20240622"

types-termcolor = "^1.1.6.2"
types-appdirs = "^1.4.3.5"
types-docutils = "^0.21.0.20240423"
types-pyasn1 = "^0.6.0.20240402"
types-pygments = "^2.18.0.20240506"
types-markupsafe = "^1.1.10"
types-aiofiles = "^24.1.0.20240626"
types-attrs = "^19.1.0"
types-click = "^7.1.8"
types-cffi = "^1.16.0.20240331"
types-urllib3 = "^1.26.25.14"
types-cryptography = "^3.3.23.2"
types-colorama = "^0.4.15.20240311"
types-openpyxl = "^3.1.5.20240630"
types-babel = "^2.11.0.15"
types-jinja2 = "^2.11.9"
types-pytz = "^2024.1.0.20240417"
types-certifi = "^2021.10.8.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
# This is what defines what "top-level" scripts will be published.
# Example Publishing: `poetry publish -r testpypi --build`
corvino_cli = "salduba.corvino.commands.cli:cli"

[tool.pytest.ini_options]
addopts = ["--cov=salduba", "--strict-markers"]
markers = [
  "tws: marks tests as requiring the tws software running in the local machine (deselect with '-m \"not tws\"')"
]

[tool.mypy]
strict=true
python_version = "3.11"
exclude = "ib_src|docs"

[[tool.mypy.overrides]]
module = 'ibapi.*'
ignore_missing_imports = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 130
skip_gitignore = true
# skip_glob = ["tests/data", "profiling"]
# known_first_party = ["black", "blib2to3", "blackd", "_black_version"]

[tool.black]
line-length = 130
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

# Configuring Credentials: https://python-poetry.org/docs/repositories/#configuring-credentials
